--- a/header_side.html
+++ b/header_side.html
@@ -95,7 +95,7 @@
 						<li><a href="/admin/index.php/album/add">新規登録</a></li>
 					</ul>
 
-					<h3><span class="icon icon--content_paste"></span>欠席/遅刻/早退連絡管理</h3>
+					<h3><span class="icon icon--paste"></span>欠席/遅刻/早退連絡管理</h3>
 					<ul>
 						<li><a href="">一覧</a></li>
 						<li><a href="">新規登録</a></li>
