--- a/header_side.html
+++ b/header_side.html
@@ -84,11 +84,11 @@
 					</ul>
 
 					<!--<h3>行事カレンダー</h3>
-					<ul>
-					<li><a href="/admin/index.php/calendar">行事一覧</a></li>
-					<li><a href="/admin/index.php/calendar/add">新規追加</a></li>
-					<li><a href="/admin/index.php/calendar/upload">アップロード</a></li>
-					</ul>-->
+	<ul>
+	<li><a href="/admin/index.php/calendar">行事一覧</a></li>
+	<li><a href="/admin/index.php/calendar/add">新規追加</a></li>
+	<li><a href="/admin/index.php/calendar/upload">アップロード</a></li>
+	</ul>-->
 					<h3><span class="icon icon--filter"></span>アルバム</h3>
 					<ul>
 						<li><a href="/admin/index.php/album">一覧</a></li>
@@ -154,6 +154,10 @@
 						<li><a href="/admin/index.php/data">データ一覧</a></li>
 						<li><a href="/admin/index.php/data/add">データ新規登録</a></li>
 					</ul>
+
+					<div id="Copyright">
+						<p>Copyright (C) Access System Co., Ltd. All Rights Reserved.</p>
+					</div>
 				</nav>
 
 				
@@ -198,10 +202,6 @@
 
 			}
 		</script>
-
-		<div id="footer">
-			<p>Copyright (C) Access System Co., Ltd. All Rights Reserved.</p>
-		</div>
 
 	</div>
 
