--- a/header_side.html
+++ b/header_side.html
@@ -74,8 +74,9 @@
 		<main class="site-main">
 			<!--ナビ-->
 			<div id="navi">
+				<button type="button" class="btn-menu"><span class="icon icon--lists"></span><span class="text">MENU</span></button>
 				<nav id="navi__inner">
-					<button type="button"><span class="icon icon--lists"></span>MENU</button>
+					
 					<a href=""><span class="icon icon--dashboard"></span>ダッシュボード</a>
 					<h3><span class="icon icon--description"></span>ブログ記事</h3>
 					<ul>
@@ -159,8 +160,6 @@
 						<p>Copyright (C) Access System Co., Ltd. All Rights Reserved.</p>
 					</div>
 				</nav>
-
-				
 			</div>
 			<!--/ナビ-->
 
