--- a/content_add.html
+++ b/content_add.html
@@ -497,6 +497,26 @@
 										<ul>
 											<li>
 												<label><input type="checkbox" value="">お知らせ	2023年度</label>
+											</li>
+											<li>
+												<label><input type="checkbox" value="">進度ベスト 2023年度</label>
+											</li>
+											<li>
+												<label><input type="checkbox" value="">お知らせ	2023年度</label>
+											</li>
+											<li>
+												<label><input type="checkbox" value="">進度ベスト 2023年度</label>
+											</li>
+											<li>
+												<label><input type="checkbox" value="">お知らせ	2023年度</label>
+											</li>
+											<li>
+												<label><input type="checkbox" value="">進度ベスト 2023年度</label>
+											</li>
+											<li>
+												<label><input type="checkbox" value="">お知らせ	2023年度</label>
+											</li>
+											<li>
 												<label><input type="checkbox" value="">進度ベスト 2023年度</label>
 											</li>
 										</ul>
@@ -507,8 +527,9 @@
 										<ul>
 											<li>
 												<label><input type="checkbox" value="">お知らせ2	2023年度</label>
-												<label><input type="checkbox" value="">進度ベス2 2023年度</label>
 											</li>
+											<li>
+												<label><input type="checkbox" value="">進度ベス2 2023年度</label></li>
 										</ul>
 									</li>
 
