テキスト修正

--- a/content.html
+++ b/content.html
@@ -174,7 +174,7 @@
 				<form name="form2" method="post" action="http://192.168.1.4/admin/index.php/content/search_exec"
 					id="search">
 					<section class="site-contents">
-						<h2><span class="icon icon--description"></span><span class="page-title">記事一覧</span></h2>
+						<h2><span class="icon icon--description"></span><span class="page-title">ブログ記事</span></h2>
 
 
 						<div class="contents">
