--- a/content.html
+++ b/content.html
@@ -238,7 +238,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10270">ww</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>0人</td>
 												<td>2024/06/27</td>
 												<td>wwwww</td>
@@ -249,11 +249,11 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10269">test</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>2人</td>
 												<td>2024/05/28</td>
 												<td>test</td>
-												<td><a
+												<td class="align--center"><a
 														href="http://192.168.1.4/admin/index.php/question/results/10269/79">結果</a>
 												</td>
 											</tr>
@@ -262,7 +262,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10268">テスト記事１</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>0人</td>
 												<td>2024/05/01</td>
 												<td>aaa</td>
@@ -273,7 +273,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10267">高3　27期</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>1人</td>
 												<td>2024/04/03</td>
 												<td>あああ</td>
@@ -284,7 +284,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10266">高3　27期</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>0人</td>
 												<td>2024/04/03</td>
 												<td>あああ</td>
@@ -295,11 +295,11 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10265">test</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>3人</td>
 												<td>2024/03/28</td>
 												<td>test</td>
-												<td><a
+												<td class="align--center"><a
 														href="http://192.168.1.4/admin/index.php/question/results/10265/1">結果</a>
 												</td>
 											</tr>
@@ -308,7 +308,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10149">新評価システムについて</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>2人</td>
 												<td>2023/05/15</td>
 												<td>亀井圭太郎</td>
@@ -319,7 +319,7 @@
 												<td><a href="http://192.168.1.4/admin/index.php/content/upd/10148">2023
 														年度以降のICT
 														機器(BYOD)について</a></td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>1人</td>
 												<td>2023/03/20</td>
 												<td>亀井圭太郎</td>
@@ -330,7 +330,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10147">新型コロナウィルス感染拡大防止のためのオンライン授業について(全学年)</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>2人</td>
 												<td>2022/07/15</td>
 												<td>亀井圭太郎</td>
@@ -341,7 +341,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10146">新型コロナウィルス感染拡大防止のためのオンライン授業について(中等部)</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>0人</td>
 												<td>2022/07/13</td>
 												<td>亀井圭太郎</td>
@@ -352,7 +352,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10145">新型コロナウィルス感染拡大防止のためのオンライン授業について(中学2年B組)</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>1人</td>
 												<td>2022/07/12</td>
 												<td>亀井圭太郎</td>
@@ -363,7 +363,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10144">熱中症予防とマスク着用について</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>0人</td>
 												<td>2022/07/05</td>
 												<td>亀井圭太郎</td>
@@ -374,7 +374,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10143">新型コロナウィルス感染拡大防止のためのオンライン授業について(中学2年生)</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>0人</td>
 												<td>2022/04/19</td>
 												<td>亀井圭太郎</td>
@@ -385,7 +385,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10142">新型コロナウィルス感染症への対応について</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>0人</td>
 												<td>2022/01/24</td>
 												<td>亀井圭太郎</td>
@@ -396,7 +396,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10141">松本秀之教諭の退職について</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>0人</td>
 												<td>2022/01/11</td>
 												<td>亀井圭太郎</td>
@@ -406,7 +406,7 @@
 												<td>学校からのお知らせ</td>
 												<td><a href="http://192.168.1.4/admin/index.php/content/upd/10140">第29回表現祭
 														来校者制限について</a></td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>0人</td>
 												<td>2021/10/04</td>
 												<td>亀井圭太郎</td>
@@ -417,7 +417,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10139">9月スタディーウィークの各行事延期について</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>1人</td>
 												<td>2021/08/19</td>
 												<td>亀井圭太郎</td>
@@ -428,7 +428,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10138">芸術鑑賞会の実施について【実施します】</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>1人</td>
 												<td>2020/09/29</td>
 												<td>亀井圭太郎</td>
@@ -439,7 +439,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10137">7/6（月）以降の平日の登校および授業スケジュール変更について</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>0人</td>
 												<td>2020/06/26</td>
 												<td>官野久光</td>
@@ -450,7 +450,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10136">緊急事態宣言解除時における今後の学園の予定について</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>1人</td>
 												<td>-0001/11/30</td>
 												<td>亀井圭太郎</td>
@@ -461,7 +461,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10135">お知らせ（再開時のスケジュールについて）</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>1人</td>
 												<td>-0001/11/30</td>
 												<td>亀井圭太郎</td>
@@ -472,7 +472,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10150">新型コロナウィルス感染拡大防止についてのお願い</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>9人</td>
 												<td>2023/05/23</td>
 												<td>亀井圭太郎</td>
@@ -494,7 +494,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10111">保健だより　6月号</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>124人</td>
 												<td>2023/06/13</td>
 												<td>小嶋　美樹</td>
@@ -505,7 +505,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10108">《高等部対象》東京都授業料軽減助成金・奨学給付金について</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>69人</td>
 												<td>2023/06/12</td>
 												<td>宮本由紀美</td>
@@ -516,7 +516,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10106">《高1対象》高等学校等就学支援金（７～６月分）神奈川県学費補助金について</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>128人</td>
 												<td>2023/06/12</td>
 												<td>宮本由紀美</td>
@@ -527,7 +527,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10105">《高2・高3対象》高等学校等就学支援金（７～６月分）神奈川県学費補助金について</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>82人</td>
 												<td>2023/06/12</td>
 												<td>宮本由紀美</td>
@@ -538,7 +538,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10097">【寮部】ホタル観賞会</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>70人</td>
 												<td>2023/06/10</td>
 												<td>坂野</td>
@@ -549,7 +549,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10096">【寮部】ディズニーランド遠足に参加された生徒の保護者の皆様へ</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>89人</td>
 												<td>2023/06/10</td>
 												<td>坂野</td>
@@ -560,7 +560,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10087">《高3対象》キーエンス財団　給付型奨学金のご案内</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>203人</td>
 												<td>2023/06/09</td>
 												<td>和田</td>
@@ -571,7 +571,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10080">進路部より：東京大学教養学部主催「高校生と大学生のための金曜特別講座」(2023年度夏学期)のご案内</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>72人</td>
 												<td>2023/06/07</td>
 												<td>進路部主任　原　英泰</td>
@@ -582,7 +582,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10061">「寮部　女子寮」こすずめ寮だより</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>39人</td>
 												<td>2023/06/01</td>
 												<td>坂野</td>
@@ -592,7 +592,7 @@
 												<td>寮</td>
 												<td><a href="http://192.168.1.4/admin/index.php/content/upd/10077">【寮部】6月9日（金）中1学年行事の昼食について
 													</a></td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>78人</td>
 												<td>2023/06/06</td>
 												<td>石井琢也</td>
@@ -603,7 +603,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10073">【寮部】前期オープンデイズについて</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>95人</td>
 												<td>2023/06/05</td>
 												<td>石井琢也</td>
@@ -614,7 +614,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10074">【寮部・男子寮】えんじゅ寮だより</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>78人</td>
 												<td>2023/06/05</td>
 												<td>石井琢也</td>
@@ -625,7 +625,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10057">進路部より：東京大学教養学部主催「高校生と大学生のための金曜特別講座」(2023年度夏学期)のご案内</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>177人</td>
 												<td>2023/06/01</td>
 												<td>進路部主任　原　英泰</td>
@@ -635,7 +635,7 @@
 												<td>食堂メニュー</td>
 												<td><a href="http://192.168.1.4/admin/index.php/content/upd/10055">
 														6月の食堂メニュー＜昼食＞</a></td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>567人</td>
 												<td>2023/05/31</td>
 												<td>小金　幸子</td>
@@ -645,7 +645,7 @@
 												<td>食堂メニュー</td>
 												<td><a href="http://192.168.1.4/admin/index.php/content/upd/10054">
 														6月の食堂メニュー＜朝夕食＞</a></td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>197人</td>
 												<td>2023/05/31</td>
 												<td>小金　幸子</td>
@@ -656,7 +656,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10050">【寮部】さわやか運動に参加しました</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>137人</td>
 												<td>2023/05/31</td>
 												<td>新宅光穂</td>
@@ -667,7 +667,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10045">『中央大学国際情報学部ガイダンス』のお知らせです。</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>279人</td>
 												<td>2023/05/30</td>
 												<td>進路部主任　原　英泰</td>
@@ -678,7 +678,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10044">【寮部】ディズニーランド寮遠足</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>136人</td>
 												<td>2023/05/30</td>
 												<td>原</td>
@@ -689,7 +689,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10043">前期中間試験時間割</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>1110人</td>
 												<td>2023/05/29</td>
 												<td>官野久光</td>
@@ -700,7 +700,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10039">6月のバス時刻表</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>929人</td>
 												<td>2023/05/28</td>
 												<td>和田</td>
@@ -711,7 +711,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10024">【寮部】外泊届のフォーム申請について</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>170人</td>
 												<td>2023/05/25</td>
 												<td>原</td>
@@ -721,7 +721,7 @@
 												<td>学校からのお知らせ</td>
 												<td><a href="http://192.168.1.4/admin/index.php/content/upd/10029">体育祭社会福祉委員会
 														募金活動にご協力ありがとうございました。</a></td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>387人</td>
 												<td>2023/05/26</td>
 												<td>瀬谷 智子</td>
@@ -732,7 +732,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10020">進路部より：東京大学教養学部主催「高校生と大学生のための金曜特別講座」(2023年度夏学期)のご案内</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>159人</td>
 												<td>2023/05/25</td>
 												<td>進路部主任　原　英泰</td>
@@ -743,7 +743,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10019">【寮部】2023年度年間行事予定（寮予定入り）0524訂正版</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>122人</td>
 												<td>2023/05/24</td>
 												<td>寮部</td>
@@ -754,7 +754,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10016">「2023年度教育講座」ご参加ありがとうございました。</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>493人</td>
 												<td>2023/05/24</td>
 												<td>浦　時緒</td>
@@ -765,7 +765,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/10010">新型コロナウィルス感染拡大防止についてのお願い</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>995人</td>
 												<td>2023/05/23</td>
 												<td>亀井圭太郎</td>
@@ -776,7 +776,7 @@
 												<td><a
 														href="http://192.168.1.4/admin/index.php/content/upd/9983">【体育祭】本日5/21(日)の開催について</a>
 												</td>
-												<td>公開</td>
+												<td class="align--center">公開</td>
 												<td>910人</td>
 												<td>2023/05/20</td>
 												<td>佐々木昌男</td>
