ページタイトルの追従

--- a/question_results.html
+++ b/question_results.html
@@ -73,8 +73,6 @@
 
 		<main class="site-main">
 
-
-
 			<!--ナビ-->
 
 			<div id="navi">
@@ -86,7 +84,7 @@
 					<h3><span class="icon icon--description"></span>ブログ記事</h3>
 					<ul>
 						<li><a href="/admin/index.php/content">一覧</a></li>
-						<li><a href="/admin/index.php/content/add" class="current">新規登録</a></li>
+						<li><a href="/admin/index.php/content/add">新規登録</a></li>
 					</ul>
 
 					<!--<h3>行事カレンダー</h3>
@@ -179,22 +177,179 @@
 						<div class="contents">
 							<section class="flex--col gap--40">
 								<div class="content">
-									<h3>ブログ記事</h3>
+									<h3>アンケート結果一覧</h3>
 									<dl class="content--resume">
-										<dt>記事名</dt><dd>2C日誌</dd>
-										<dt>カテゴリ名</dt><dd>学校からのお知らせ</dd>	
+										<dt>アンケート名</dt>
+										<dd>教室の温度についてのアンケート</dd>
 									</dl>
 								</div>
-
 								<div class="content">
-									<div class="msginfo">
-										<p>処理が完了しました</p>
+									<nav class="align--right">
+										<a href="http://192.168.1.4/admin/index.php/question/results_dl/10265/1"
+											class="btn-square btn-square--gray btn-square--ss"><span
+												class="icon icon--download"></span>CSVダウンロード</a>
+									</nav>
+
+									<div class="tbl-scroll">
+										<div class="tbl-scroll__inner">
+										<table class="tbl--s01">
+											<thead>
+												<tr>
+													<th>お名前</th>
+													<th>メールアドレス</th>
+													<th>参加するかどうか</th>
+													<th>回答日時</th>
+													<th>テキスト</th>
+													<th>テキスト</th>
+													<th>テキスト</th>
+													<th>テキスト</th>
+													<th>テキスト</th>
+													<th>テキスト</th>
+													<th>テキスト</th>
+													<th>テキスト</th>
+													<th>テキスト</th>
+													<th>テキスト</th>
+													<th>テキスト</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>あああああ</td>
+													<td>nakamata@access-it.co.jp</td>
+													<td>はい</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>2024/05/13</td>
+												</tr>
+												<tr>
+													<td>あああああ</td>
+													<td>nakamata@access-it.co.jp</td>
+													<td>はい</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>2024/05/13</td>
+												</tr>
+												<tr>
+													<td>あああああ</td>
+													<td>nakamata@access-it.co.jp</td>
+													<td>はい</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>2024/05/13</td>
+												</tr>
+												<tr>
+													<td>あああああ</td>
+													<td>nakamata@access-it.co.jp</td>
+													<td>はい</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>2024/05/13</td>
+												</tr>
+												<tr>
+													<td>あああああ</td>
+													<td>nakamata@access-it.co.jp</td>
+													<td>はい</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>2024/05/13</td>
+												</tr>
+												<tr>
+													<td>あああああ</td>
+													<td>nakamata@access-it.co.jp</td>
+													<td>はい</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>2024/05/13</td>
+												</tr>
+												<tr>
+													<td>あああああ</td>
+													<td>nakamata@access-it.co.jp</td>
+													<td>はい</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>テキスト</td>
+													<td>2024/05/13</td>
+												</tr>
+											</tbody>
+										</table>
+										</div>
 									</div>
+									
 								</div>
 
 								<div class="content align--center mt--30">
 									<a href="http://192.168.1.4/admin/index.php/content/" class="btn-border btn-border--green btn-border--s">一覧へ戻る</a>
 								</div>
+
+								<div class="flex gap--40">
+								<button type="button" onclick="deleteForm()" class="btn-square btn-square--s btn-square--orange">
+										このアンケート一覧を削除する
+									</button>
+
+							</div>
+
 							</section>
 
 
